[package]
name = "saty-watch"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
itertools = "0.10.1"
notify = "4.0.17"
wsl = "0.1.0"
wslpath = "0.0.2"
